fix feedback cards not equal width and height issue and hide the nav buttons on mobile view

--- a/src/app/modules/landing-page/feed-back-carousel/feed-back-carousel.scss
+++ b/src/app/modules/landing-page/feed-back-carousel/feed-back-carousel.scss
@@ -127,10 +127,12 @@
     }
     
     .navigation-area {
-        order: 2;
       p {
-        font-size: $font-size-xl;
-        max-width: 250px;
+        font-size: $font-size-lg;
+        width: 100%;
+      }
+      .navigation-buttons{
+        display: none;
       }
     }
   }
